--- a/portfolio/src/Components/Projectcontent.css
+++ b/portfolio/src/Components/Projectcontent.css
@@ -7,16 +7,23 @@
 }
 
 .project h1 {
-  margin: 25px 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  /* font-family: "DotGothic16", sans-serif; */
+  font-family: "Balsamiq Sans", cursive;
 }
 
 .project-p {
-  margin: 0 100px;
+  margin: 30px 400px 20px 400px;
+  /* font-family: "DotGothic16", sans-serif; */
+  font-family: "Balsamiq Sans", cursive;
 }
 
 .project-body {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -33,8 +40,18 @@
 
 .project-nav {
   margin: 10px 150px;
+  /* font-family: "DotGothic16", sans-serif; */
+  font-family: "Balsamiq Sans", cursive;
 }
 
 .project-nav a {
-  margin: 10px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px black solid;
+  margin: 5px 400px 20px 400px;
+}
+
+.body-main {
+  margin-top: 100px;
 }
