--- a/portfolio/src/Pages/Home.css
+++ b/portfolio/src/Pages/Home.css
@@ -7,7 +7,7 @@
 } */
 
 .img-container {
-  height: 50%;
+  height: auto;
   width: auto;
   border-radius: 50%;
   display: flex;
@@ -26,15 +26,16 @@
   display: flex;
   justify-content: center;
   margin: 25px 500px;
-  font-family: "Source Serif Pro", serif;
-  font-family: "Tajawal", sans-serif;
+  /* font-family: "DotGothic16", sans-serif; */
+  font-family: "Balsamiq Sans", cursive;
 }
 
 .title {
   display: flex;
   justify-content: center;
   /* margin: 0 100px; */
-  font-family: "Source Serif Pro", serif;
+  /* font-family: "DotGothic16", sans-serif; */
+  font-family: "Balsamiq Sans", cursive;
 }
 
 .meta-open {
