--- a/portfolio/src/Pages/About.css
+++ b/portfolio/src/Pages/About.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 50px 400px;
+  margin: 50px 300px;
   /* font-family: "Source Serif Pro", serif;
   font-family: "Tajawal", sans-serif; */
   /* font-family: "DotGothic16", sans-serif; */
@@ -20,4 +20,25 @@
 .skills {
   display: flex;
   justify-content: center;
+  font-family: "Balsamiq Sans", cursive;
+  font-size: larger;
+}
+
+.container {
+  height: 100vh;
+}
+
+.container h1 {
+  font-family: "Parisienne", cursive;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.programming {
+  display: flex;
+  justify-content: center;
+  font-family: "Balsamiq Sans", cursive;
+  font-size: larger;
 }
