--- a/portfolio/src/Pages/Home.css
+++ b/portfolio/src/Pages/Home.css
@@ -7,7 +7,7 @@
 } */
 
 .img-container {
-  height: auto;
+  height: 100%;
   width: auto;
   border-radius: 50%;
   display: flex;
@@ -26,6 +26,8 @@
   display: flex;
   justify-content: center;
   margin: 25px 500px;
+  padding-bottom: 300px;
+  /* padding-top: 200px; */
   /* font-family: "DotGothic16", sans-serif; */
   font-family: "Balsamiq Sans", cursive;
 }
